# streaming_data

./: .envrc  .gitignore  .markdownlint.yml  .pre-commit-config.yaml  .python-version  Brewfile  pyproject.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml  settings.yml
.github/workflows/: check-bom.yml  check-yaml.yml  pre-commit.yml  release.yml  ruff.yml  shellcheck.yml  unit-tests.yml
docker/: Dockerfile  docker-compose.debug.yml  docker-compose.yml
src/project_name/: hello_world.py
